Nav Menu Fix spacing 2

--- a/styles/menuBar768.css
+++ b/styles/menuBar768.css
@@ -48,18 +48,17 @@ For screens 768px and less
     /* MENU */
     .nav-menu {
         list-style: none;
-        display: flex;
         flex-wrap: nowrap; /* force single row */  
         overflow-x: auto;      /* allows safe scrolling if needed */     
         justify-content: center;
         align-items: center;
         gap: 3px;
         padding: 0 10px;
-        padding-left: -5px;
+        padding-left: -7px;
     }
 
     /* LINKS */
-    .nav-menu a, span {
+    .nav-menu a, .nav-menu span {
         color: white;
         text-decoration: none;
         font-size: 14px;
